--- a/index.html
+++ b/index.html
@@ -1,85 +1,436 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta charset="UTF-8">
+	<title>dome</title>
+    <link rel="stylesheet" href="css/base.css">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+	<style>
+		body{
+			background: #20181f;
+		}
+		header{
+			position: fixed;
+			top: 0;
+			left: 0;
+			height: 90px;
+			width: 100%;
+			z-index: 5;
+			background: #20181f;
+			line-height: 90px;
+			font-size: 30px;
+			color: #fff;
+		}
+		.logo{
+			float: left;
+			margin-left: 100px;
+			width: 100px;
+			text-align: center;
+		}
+		.title{
+			width: 100px;
+			text-align: center;
+			float: left;
+			height:90px;
+			position: absolute;
+			top: 0;
+			left: 50%;
+			margin-left: -50px;
+		}
+		.back{
+			width: 100px;
+			height: 50px;
+			line-height: 50px;
+			text-align: center;
+			float: right;
+			margin-right: 100px;
+			margin-top: 20px;
+			-webkit-box-shadow:0 0 18px #fff;
+			-moz-box-shadow:0 0 18px #fff;
+			box-shadow:0 0 18px #fff;
+			cursor: pointer;
+		}
+		.back a{
+			display: block;
+			height: 100%;
+			width: 100%;
+			color: #fff;
+		}
+		.content{
+			position: relative;
+		}
 
-  <title>Music</title>
-  <meta name="description" content="">
+		.header{
+			color: orange;
+			margin-top:30px;
+			width: 100%;
+			text-align: center;
+		}
+		#mp3{
+			color: #fff;
+			width: 200px;
+			margin: 25px 20px;
+			color: orange;
+		}
+		#mp3 ul{
+			margin-top: 50px;
+			margin-left: 50px;
+		}
+		#mp3 li{
+			width: 500px;
+			height: 60px;
+			line-height: 60px;
+			border-bottom: 2px solid rgba(127,104,85,1);
+			padding-left: 40px;
+		}
+		#mp3 li:hover{
+			-webkit-box-shadow:0 0 18px #fff;
+			-moz-box-shadow:0 0 18px #fff;
+			box-shadow:0 0 18px #fff;
+		}
+		#mp3 .on{
+			color: #fff;
+		}
+		#box{
+			width: 800px;
+			height: 200px;
+			position: absolute;
+			top: 400px;
+			left: 200px;
+		}
+		#box ul{
+			width:168px;
+			position: absolute;
+			top: 84px;
+			left: 10px;
+		}
+		#box ul li{
+			float:left; 
+			cursor:pointer;
+		}
+		#center{
+			width:20px; 
+			height:24px; 
+			margin:0 42px 0 50px;
+			position:relative;
+		}
+		#center span{
+			position:absolute;
+			top:0; 
+			left:0;
+		}
+		#c1{
+			border:16px solid transparent;
+			border-left:16px solid #e8e6e3;
+			 margin-top:-3px;
+		}
+		#c2{
+			width:20px;
+		 	height:24px; 
+		    background:-webkit-linear-gradient(left,#e8e6e3 40%,#836e5c 40%,#836e5c 60%,#e8e6e3 60%);
+		    background:-moz-linear-gradient(left,#e8e6e3 40%,#836e5c 40%,#836e5c 60%,#e8e6e3 60%);
+		    display:none; 
+		    margin-left:-3px;  
+		    background:-ms-linear-gradient(left,#e8e6e3 40%,#8d8175 40%,#8d8175 60%,#e8e6e3 60%);
+		}
+		#before{
+			border:14px solid transparent; 
+			border-right:14px solid #eee; 
+			float:left; 
+			border-radius:5px;
+		}
+		#next{
+			border:14px solid transparent; 
+			border-left:14px solid #eee; 
+			float:right; 
+			border-radius:5px;
+		}
+		#progress{
+			width: 400px;
+			height: 3px;
+			background: #fff;
+			position: absolute;
+			top: 100px;
+			left: 210px;
+		}
+		#progress #curr{
+			display: block;
+			width: 0%;
+			height: 100%;
+			background: skyblue;
+		}
+		#progress #cursor{
+			display: block;
+			position: absolute;
+			top: -6px;
+			left: 0;
+			width: 15px;
+			height: 15px;
+			background: #fff;
+			border-radius: 50%;
+			cursor: pointer;
+		}
+		#volume{
+			width: 100px;
+			position: absolute;
+			top: 150px;
+			left: 210px;
+			color: yellow;
+		}
+		#muted{
+			width: 50px;
+			position: absolute;
+			top: 150px;
+			left: 350px;
+			color: yellow;
+			cursor: pointer;
+		}
+		#mode{
+			width: 80px;
+			position: absolute;
+			top: 150px;
+			left: 420px;
+			color: yellow;
+			cursor: pointer;
+		}
+		#picture{
+			border-radius: 50%;
+			overflow: hidden;
+			width: 300px;
+			height: 300px;
+			position: absolute;
+			right: 160px;
+			top: 85px;
+			transform: rotate(0deg);	
+		}
+		#picture img{
+			width: 100%;
+			height: 100%;
+		}
+	</style>
+	<script>
+		window.onload=function(){
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+			if(navigator.userAgent.indexOf('MSIE')!=-1){
+				alert('使用IE浏览器会影响您的体验，请升级浏览器');
+			}
+			var oA=document.getElementById('a1');
+			var aLi=document.querySelectorAll('#mp3 ul li');
+			var oCurr=document.getElementById('curr');
+			var oCursor=document.getElementById('cursor');
+			var oRan=document.getElementById('ran');
+			var oMut=document.getElementById('muted');
+			var oMode=document.getElementById('mode');
+			var oPlay=document.getElementById('center');
+			var oBef=document.getElementById('before');
+			var oNext=document.getElementById('next');
+			var oPicture=document.getElementById('picture');
+			var iR=0;
+			var iNow=0;
+			var iMod=0;
+			var x=0;
 
+			
+			//播放暂停
+			oPlay.onclick=function(){
+				if(oA.paused){
+					oA.play();
+					oPlay.children[0].style.display='none';
+					oPlay.children[1].style.display='block';
+					clearInterval(oPicture.timer);
+					oPicture.timer=setInterval(function(){
+						iR++;
+						oPicture.style.transform='rotate('+iR%360+'deg)';
+					},16);
+				}else{
+					oA.pause();
+					oPlay.children[1].style.display='none';
+					oPlay.children[0].style.display='block';
+					clearInterval(oPicture.timer);
+				}
+			};
+
+
+			//进度条
+			oA.ontimeupdate=function(){
+				var scale=oA.currentTime/oA.duration;
+				oCurr.style.width=scale*100+'%';
+				oCursor.style.left=scale*393+'px';
+				x=oCursor.offsetLeft;
+				
+			};
+			oCursor.onmousedown=function(ev){
+				var oEvent=ev || event;
+				var disX=oEvent.clientX-x;
+				document.onmousemove=function(ev){
+					var oEvent=ev || event;
+					x=oEvent.clientX-disX;
+					if(x<0){
+						x=0;
+					}else if(x>393){
+						x=393;
+					}
+					var scale=x/393;
+					oA.currentTime=oA.duration*scale;
+					oCurr.style.width=scale*100+'%';
+					oCursor.style.left=x+'px';
+
+				};
+				document.onmouseup=function(){
+					document.onmousemove=null;
+					document.onmouseup=null;
+					oCursor.removeCapture&&oCursor.removeCapture();
+				};
+				return false;
+				oCursor.setCapture&&oCursor.setCapture();
+			};
+			//音量
+			oRan.onchange=function(){
+				oA.volume=this.value/100;
+			};
+			//静音
+			oMut.onclick=function(){
+				if(oA.muted){
+					oA.muted=false;
+					oMut.style.color='yellow';
+				}else{
+					oA.muted=true;
+					oMut.style.color='red';
+				}
+				return false;
+			};
+			//播放方式
+			oMode.onclick=function(){
+				iMod++;
+				if(iMod==4){iMod=0;}
+				switch(iMod){
+					case 0:
+						oMode.innerHTML='单曲循环';
+						break;
+					case 1:
+						oMode.innerHTML='列表播放';
+						break;
+					case 2:
+						oMode.innerHTML='随机播放';
+						break;
+					case 3:
+						oMode.innerHTML='列表循环';
+						break;
+				}
+				return false;
+			};
+			//双击播放
+			for(var i=0;i<aLi.length;i++){
+				aLi[i].index=i;
+				aLi[i].ondblclick=function(){
+					iNow=this.index;
+					play();
+					return false;
+				};
+			}
+			//结束判断
+			oA.onended=function(){
+				switch(iMod){
+					case 0:
+						play();
+						break;
+					case 1:
+						if(iNow==aLi.length-1){
+							alert('播放完毕');
+						}else{
+							iNow++;
+							play();
+						}
+						break;
+					case 2:
+						iNow=parseInt(Math.random()*(aLi.length));
+						play();
+						break;
+					case 3:
+						iNow++;
+						if(iNow==aLi.length){
+							iNow=0;
+						}
+						play();
+						break;
+				}
+			};
+			//播放函数
+			function play(){
+				for(var i=0;i<aLi.length;i++){
+					aLi[i].className='';
+				}
+				aLi[iNow].className='on';
+				var str=aLi[iNow].innerHTML;
+				oA.src='mp3/'+str+'.mp3';
+				oA.play();
+				oPlay.children[0].style.display='none';
+				oPlay.children[1].style.display='block';
+				clearInterval(oPicture.timer);
+				oPicture.timer=setInterval(function(){
+					iR++;
+					oPicture.style.transform='rotate('+iR%360+'deg)';
+				},16);
+			}
+			//上一曲，下一曲
+			oBef.onclick=function(){
+				iNow--;
+				if(iNow==-1){
+					iNow=aLi.length-1;
+				}
+				play();
+			};
+			oNext.onclick=function(){
+				iNow++;
+				if(iNow==aLi.length){
+					iNow=0;
+				}
+				play();
+			};
+
+		};
+	</script>
 </head>
-
 <body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Music</h1>
-    </header>
-    <div id="container">
-      <p class="tagline"></p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/jseryuan/music/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/jseryuan/music/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/jseryuan/music" class="code">View Music on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-        </article>
-      </div>
-    </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/jseryuan" class="avatar"><img src="https://avatars1.githubusercontent.com/u/23075843?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/jseryuan">jseryuan</a> maintains <a href="https://github.com/jseryuan/music">Music</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/jseryuan/music/tarball/master" class="tar">tar</a><a href="https://github.com/jseryuan/music/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
+	<header>
+		<div class="logo">JserYuan</div>
+		<div class="title">音乐盒</div>
+		<div class="back">
+			<a href="https://jseryuan.github.io">Back</a>
+		</div>
+	</header>
+	<div class="content">
+		<h2 class="header">我的音乐盒</h2>
+		<div id="mp3">
+			<ul>
+				<li class="on">千千阙歌</li>
+				<li>时间都去哪儿了</li>
+				<li>小苹果</li>
+				<li>夜的钢琴曲</li>
+				<li>雨的印记</li>
+			</ul>
+		</div>
+		<audio src="mp3/千千阙歌.mp3" id="a1" ></audio>
+		<div id="box">
+			<ul class="clearfix">
+				<li id="before"></li>
+				<li id="center">
+					<span id="c1"></span>
+					<span id="c2"></span>
+				</li>
+				<li id="next"></li>
+			</ul>
+			<div id="progress">
+				<span id="curr"></span>
+				<span id="cursor"></span>
+			</div>
+			<div id="volume">音量：<input type="range" name="" value="100" id="ran"></div>
+			<div id="muted">静音</div>
+			<div id="mode">单曲循环</div>
+		</div>
+		<div id="picture">
+			<img src="img/1.jpg">
+		</div>
+	</div>
 </body>
 </html>
